[project]
name = "fessctl"
version = "0.1.0"
description = "CLI tool to manage Fess using the admin API"
authors = [{ name = "CodeLibs, Inc.", email = "info@codelibs.co" }]
dependencies = [
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "typer[all]==0.15.2",
]

[project.scripts]
fessctl = "fessctl.cli:main"
